# RTunes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: default_config.yaml
docs/: implementation.md  plan.md  todo.md
scripts/: package.ps1  package.sh
src/: cli.rs  error.rs  lib.rs  main.rs  utils.rs
src/app/: mod.rs  state.rs
src/audio/: backend.rs  mod.rs  player.rs  tap_source.rs
src/config/: mod.rs  theme.rs
src/fetcher/: deps.rs  downloader.rs  mod.rs  picker.rs  pool.rs
src/tui/: color.rs  events.rs  mod.rs  terminal.rs  ui.rs
src/visualizer/: data.rs  fft.rs  mod.rs  smoothing.rs  thread.rs
src/visualizer/renderers/: band_meter.rs  canvas.rs  mod.rs  oscilloscope.rs  particles.rs  phosphor.rs  pulse_rings.rs  rand.rs  spectrogram.rs  spectrum.rs  supernova.rs  vectorscope.rs
tests/integration/: event_dispatch.rs  fetcher_tui.rs  headless_tui.rs  scan_perf.rs
